# CTFriend

./: .env.example  .gitignore  README.md  README_Main.md  backup.sh  docker-compose.yaml  gen-login-token.sh  prometheus.yml  pyproject.toml  restore.sh  send-email-w-token.py
dashboards/: chat_data_dashboard.json  system_monitoring_dashboard.json
knowledge_base/docs/Binary Exploit/: help_sites.md
knowledge_base/docs/Malware Analysis/: anti_analysis.md
knowledge_base/docs/pwntools/: assembly.md  bytes.md  context.md  debugging.md  elf.md  installing.md  into.md  logging.md  pwninit.md  rop.md  tubes.md  utility.md
knowledge_base/docs/tools/: ROPGadget.md  checksec.md  frida.md  gef.md  unicorn.md
mcp_servers/cyberchef_api_mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_servers/cyberchef_api_mcp_server/src/: __main__.py  cyberchefoperations.py  server.py
mcp_servers/cyberchef_api_mcp_server/tests/: test_cyberchefoperations.py  test_server.py
mcp_servers/cyberchef_backend/: Dockerfile
mcp_servers/rag_mcp_server/: Dockerfile  pyproject.toml
mcp_servers/rag_mcp_server/src/: server.py
src/: Dockerfile  pyproject.toml
src/.streamlit/: config.toml
src/app/: __main__.py  token_manager.py
src/app/core/: db_logger.py  mcp_client_sync.py  ui.py
