[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CTFriend"
version = "0.1.0"
description = "Streamlit app for a single LLM agent with MCP tools"
authors = [
    { name = "Admin", email = "ctfriend@local.local" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-core>=0.3.66,<0.4",
    "langchain-mcp-adapters>=0.1.0,<0.2",
    "langchain-anthropic",
    "langchain-google-genai",
    "openai",
    "ollama",
    "watchdog",
    "sqlalchemy",
    "psycopg2-binary",
    "tzlocal"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_mcp_agent*"]
