[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-mcp-server"
version = "0.1.0"
description = "A standalone MCP server for Retrieval-Augmented Generation using local embeddings."
authors = [
  { name="Admin", email="ctfriend@local" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "fastmcp",
    "faiss-cpu",
    "pypdf",
    "unstructured",
    "python-magic",
    "markdown",
    "sentence-transformers"
]
